tests/ui/fmt/issue-116631.stderr
error: literal out of range for `u8`
  --> $DIR/issue-116631.rs:2:26
   |
LL |     format_args!("{}\n", 0xffff_ffff_u8);
   |                          ^^^^^^^^^^^^^^ help: consider using the type `u32` instead: `0xffff_ffff_u32`
   |
   = note: the literal `0xffff_ffff_u8` (decimal `4294967295`) does not fit into the type `u8` and will become `255u8`
   = note: `#[deny(overflowing_literals)]` on by default

error: aborting due to previous error

